Fix right alignment on all display settings. Remove hack for older browsers. Thanks Enchi!

--- a/flair/_link.scss
+++ b/flair/_link.scss
@@ -24,7 +24,7 @@
   background: url(%%linkflair%%) no-repeat;
   color: transparent;
   font-size: 0;
-  margin-left: calc(100% - 545px);
+  right: 365px;
   margin-top: -8px;
   height: 81px;
   max-width: 32px;
